## Next version

## 1.65.1
[query] Fix response object type order

## 1.65
[update] Add syntax check before calling dnscheck
[wsearch] Separate domain part of email addresses to make it searchable
[wsearch] Handle ipv6 addresses with prefix length correctly
[rest api] Report tags at object level (rather than global)
[rest api] Stream search query results
[rest api] Update documentation to replace labs article

## 1.64
[nrtm] added property port.nrtm.legacy
[nrtm] implemented new dummification alongside the legacy one
[dump] added new-style export in dbase_new directory
[dump] added properties dir.rpsl.export.* to control export directories

## 1.63
[update] End of line comment on source attribute is no longer allowed
[rest api] Tags supported
[rest api] Version (history) supported
[query] Long option --filter-types renamed to --select-types
[grs] data is now dummified on-the-fly (existing databases will need to be regenerated)

## 1.62
[query] Invalid combination of query flags only reported once
[query] Log api in query log
[all] Test data anonymised

## 1.61
[all] Easy-whois phase 1
[update] Disallow too large route and route6 object creations

## 1.60.2
[update] Log exceptions when verifying PGP-signed messages
[update] Fixed issue verifying signed message with DSA key and RIPEMD160 hash
[query] Also filter CRYPT-PW auth: lines in the historical objects
[query] Blocked users can still perform non-search queries like help
[all] Merged into single jar

## 1.59.5
[query] Store IPv4 ACL entries in standard format (including prefix length)
[update] More verbose error messages for abuse-c attributes.

## 1.59.4
[all] JMX callable operations should not throw Exceptions.

## 1.59.3
[query] Fixed grs base url in whois.properties
[all] Fixed startup locking slowness

## 1.59.2
[all] Added rpsl.export.enabled option

## 1.59.1
[all] delegate java.util.logging to SLF4J

## 1.59
[all] Allow running query, nrtm and updates in a single JVM