@@ -24,6 +24,7 @@ api.key=DB-WHOIS-123456789abcdef
 
 # Comma separated list of GRS sources
 grs.sources=
+grs.sources.dummify=
 
 # Comma separated list of IP ranges from which sensitive operations are accessible
 ipranges.trusted=127.0.0.1,::1
