@@ -6,9 +6,9 @@ import com.google.common.collect.Sets;
 import net.ripe.db.whois.common.domain.CIString;
 import net.ripe.db.whois.common.domain.ResponseObject;
 import net.ripe.db.whois.common.rpsl.ObjectType;
+import net.ripe.db.whois.common.source.IllegalSourceException;
 import net.ripe.db.whois.common.source.Source;
 import net.ripe.db.whois.common.source.SourceContext;
-import net.ripe.db.whois.common.source.SourceNotConfiguredException;
 import net.ripe.db.whois.query.domain.MessageObject;
 import net.ripe.db.whois.query.domain.QueryMessages;
 import net.ripe.db.whois.query.domain.ResponseHandler;
@@ -73,7 +73,7 @@ public class SearchQueryExecutor implements QueryExecutor {
                     // TODO: [AH] make sure responseHandler implementation can handle executionHandler worker threads pushing data (think of suspend-on-write, buffer overflow, slow connections, etc...)
                     responseHandler.handle(responseObject);
                 }
-            } catch (SourceNotConfiguredException e) {
+            } catch (IllegalSourceException e) {
                 responseHandler.handle(new MessageObject(QueryMessages.unknownSource(source.getName()) + "\n"));
             } finally {
                 sourceContext.removeCurrentSource();
